--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   web:
-    build: .
+    image: webapp:latest
     container_name: django
     ports:
       - "8000:8000"
