--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,6 +11,5 @@ jobs:
       - uses: actions/setup-python@v3
       - run: pip install --upgrade pip
       - run: pip install --editable .
-      - run: cd app
-      - run: python3 manage.py migrate
-      - run: python3 manage.py test
+      - run: python3 app/manage.py migrate
+      - run: python3 app/manage.py test
